# pycollection

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pycollection/: collection.py  enmap.py
src/pycollection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_collection.py
