[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycollection"
version = "1.0.0"
description = "pycollection is a powerful utility data structure."
readme = "README.md"
authors = [{ name = "Riichi Rusdiana/BillyAddlers", email = "finnsonalca123@gmail.com"}]
license = { file = "LICENSE" }
keywords = ["pycollection", "data structure", "collection", "python", "map", "hashmap", "enmap"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["bumbver", "pip-tools", "pytest"]

[project.urls]
homepage = "https://github.com/BillyAddlers/pycollection"
repository = "https://github.com/BillyAddlers/pycollection"
documentation = "https://github.com/BillyAddlers/pycollection"

[tool.bumpver]
current_version = "2022.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

